5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4006/executions/1756_1576.log
== TEST (2019-05-22 13:12:08) 
-- CODE:
a = array(eval(input("jogadores de eusapia")))
b = array(eval(input("jogadores de barsanulfo")))
[11]= pedra
-- ERROR:
File "XXXX", line 3
    [11]= pedra
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 13:12:40) 
-- CODE:
a = array(eval(input("jogadores de eusapia")))
b = array(eval(input("jogadores de barsanulfo")))
11= pedra
print(a)
-- ERROR:
File "XXXX", line 3
    11= pedra
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 13:17:07) 
-- CODE:
a = array(eval(input("jogadores de eusapia")))
b = array(eval(input("jogadores de barsanulfo")))
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 13:17:34) 
-- CODE:
from numpy import*
a = array(eval(input("jogadores de eusapia")))
b = array(eval(input("jogadores de barsanulfo")))
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 13:18:14) 
-- CODE:
from numpy import*
a = array(eval(input("jogadores de eusapia")))
b = array(eval(input("jogadores de barsanulfo")))
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 13:18:16) 
-- CODE:
from numpy import*
a = array(eval(input("jogadores de eusapia")))
b = array(eval(input("jogadores de barsanulfo")))
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 13:18:16) 
-- CODE:
from numpy import*
a = array(eval(input("jogadores de eusapia")))
b = array(eval(input("jogadores de barsanulfo")))
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 13:18:17) 
-- CODE:
from numpy import*
a = array(eval(input("jogadores de eusapia")))
b = array(eval(input("jogadores de barsanulfo")))
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 13:18:18) 
-- CODE:
from numpy import*
a = array(eval(input("jogadores de eusapia")))
b = array(eval(input("jogadores de barsanulfo")))
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 13:18:18) 
-- CODE:
from numpy import*
a = array(eval(input("jogadores de eusapia")))
b = array(eval(input("jogadores de barsanulfo")))
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 13:18:19) 
-- CODE:
from numpy import*
a = array(eval(input("jogadores de eusapia")))
b = array(eval(input("jogadores de barsanulfo")))
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 13:18:19) 
-- CODE:
from numpy import*
a = array(eval(input("jogadores de eusapia")))
b = array(eval(input("jogadores de barsanulfo")))
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 13:18:19) 
-- CODE:
from numpy import*
a = array(eval(input("jogadores de eusapia")))
b = array(eval(input("jogadores de barsanulfo")))
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 13:18:19) 
-- CODE:
from numpy import*
a = array(eval(input("jogadores de eusapia")))
b = array(eval(input("jogadores de barsanulfo")))
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 13:18:19) 
-- CODE:
from numpy import*
a = array(eval(input("jogadores de eusapia")))
b = array(eval(input("jogadores de barsanulfo")))
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 13:18:19) 
-- CODE:
from numpy import*
a = array(eval(input("jogadores de eusapia")))
b = array(eval(input("jogadores de barsanulfo")))
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 13:18:21) 
-- CODE:
from numpy import*
a = array(eval(input("jogadores de eusapia")))
b = array(eval(input("jogadores de barsanulfo")))
print(a)
-- EXECUTION TIME:
0.933224
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
[33 22 33 22 11 11 33 22 11 11 22 33]
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
[33 22 33 11 33 22 11 22 33 11]
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
[33 33 22 11 11 22 33 33 22 11 11 22 33 33 22 11 11 22]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 13:30:49) 
-- CODE:
from numpy import*
a = array(eval(input("jogadores de eusapia")))
b = array(eval(input("jogadores de barsanulfo")))
while (11=="Pedra") or  (22=="Papel") or (33=="Tezoura")

-- ERROR:
File "XXXX", line 4
    while (11=="Pedra") or  (22=="Papel") or (33=="Tezoura")
                                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 13:31:00) 
-- CODE:
from numpy import*
a = array(eval(input("jogadores de eusapia")))
b = array(eval(input("jogadores de barsanulfo")))
while (11=="Pedra") or  (22=="Papel") or (33=="Tezoura")

-- ERROR:
File "XXXX", line 4
    while (11=="Pedra") or  (22=="Papel") or (33=="Tezoura")
                                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 13:31:03) 
-- CODE:
from numpy import*
a = array(eval(input("jogadores de eusapia")))
b = array(eval(input("jogadores de barsanulfo")))
while (11=="Pedra") or  (22=="Papel") or (33=="Tezoura"):

-- ERROR:
File "XXXX", line 5
    
                                                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 13:31:14) 
-- CODE:
from numpy import*
a = array(eval(input("jogadores de eusapia")))
b = array(eval(input("jogadores de barsanulfo")))
while (11=="Pedra") or  (22=="Papel") or (33=="Tezoura"):

-- EXECUTION TIME:
0.212536
-- ERROR:
  File "/home/codebench/codes/1756/1576/main.py", line 5
    
                                                             ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 13:31:16) 
-- CODE:
from numpy import*
a = array(eval(input("jogadores de eusapia")))
b = array(eval(input("jogadores de barsanulfo")))
while (11=="Pedra") or  (22=="Papel") or (33=="Tezoura"):

-- ERROR:
File "XXXX", line 5
    
                                                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:04:19) 
-- CODE:
from numpy import*
a = array(eval(input("jogadores de eusapia")))
b = array(eval(input("jogadores de barsanulfo")))
print(len(a))
while (11=="Pedra") or  (22=="Papel") or (33=="Tezoura"):

-- ERROR:
File "XXXX", line 6
    
                                                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:42:33) 
-- CODE:
from numpy import*
a = array(eval(input("jogadores de eusapia")))
b = array(eval(input("jogadores de barsanulfo")))
i = 0 #posicao do vetor
j = 0 #vitorias eusapia
k = 0 #vitorias barsanulfo
while(i < size(a)):
	i= i + 1
	if(a[i]==11 and b[i]==22):
		k = k +1
	elif(a[i]==11 and b[i]==33):
		j = j +1
	elif(a[i]==22 and b[i]==11):
		j = j + 1
	elif(a[i]==22 and b[i]==33):
		k = k + 1
	elif(a[i]==33 and b[i]==11):
		k = k + 1
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:42:33) 
-- CODE:
from numpy import*
a = array(eval(input("jogadores de eusapia")))
b = array(eval(input("jogadores de barsanulfo")))
i = 0 #posicao do vetor
j = 0 #vitorias eusapia
k = 0 #vitorias barsanulfo
while(i < size(a)):
	i= i + 1
	if(a[i]==11 and b[i]==22):
		k = k +1
	elif(a[i]==11 and b[i]==33):
		j = j +1
	elif(a[i]==22 and b[i]==11):
		j = j + 1
	elif(a[i]==22 and b[i]==33):
		k = k + 1
	elif(a[i]==33 and b[i]==11):
		k = k + 1
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:42:33) 
-- CODE:
from numpy import*
a = array(eval(input("jogadores de eusapia")))
b = array(eval(input("jogadores de barsanulfo")))
i = 0 #posicao do vetor
j = 0 #vitorias eusapia
k = 0 #vitorias barsanulfo
while(i < size(a)):
	i= i + 1
	if(a[i]==11 and b[i]==22):
		k = k +1
	elif(a[i]==11 and b[i]==33):
		j = j +1
	elif(a[i]==22 and b[i]==11):
		j = j + 1
	elif(a[i]==22 and b[i]==33):
		k = k + 1
	elif(a[i]==33 and b[i]==11):
		k = k + 1
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:42:33) 
-- CODE:
from numpy import*
a = array(eval(input("jogadores de eusapia")))
b = array(eval(input("jogadores de barsanulfo")))
i = 0 #posicao do vetor
j = 0 #vitorias eusapia
k = 0 #vitorias barsanulfo
while(i < size(a)):
	i= i + 1
	if(a[i]==11 and b[i]==22):
		k = k +1
	elif(a[i]==11 and b[i]==33):
		j = j +1
	elif(a[i]==22 and b[i]==11):
		j = j + 1
	elif(a[i]==22 and b[i]==33):
		k = k + 1
	elif(a[i]==33 and b[i]==11):
		k = k + 1
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:51:59) 
-- CODE:
from numpy import*
a = array(eval(input("jogadores de eusapia")))
b = array(eval(input("jogadores de barsanulfo")))
i = 0 #posicao do vetor
j = 0 #vitorias eusapia
k = 0 #vitorias barsanulfo
while(i < size(a)):
	if(a[i]==11 and b[i]==22):
		k = k +1
	elif(a[i]==11 and b[i]==33):
		j = j +1
	elif(a[i]==22 and b[i]==11):
		j = j + 1
	elif(a[i]==22 and b[i]==33):
		k = k + 1
	elif(a[i]==33 and b[i]==11):
		k = k + 1
	elif(a[i]==33 and b[i]==22):
		j = j + 1
	i = i + 1
print(i)
if(j>k):
	print("EUSAPIA")
elif(j<k):
	print("BARSANULFO")
else :
	print("EMPATE")

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 14:52:23) 
-- CODE:
from numpy import*
a = array(eval(input("jogadores de eusapia")))
b = array(eval(input("jogadores de barsanulfo")))
i = 0 #posicao do vetor
j = 0 #vitorias eusapia
k = 0 #vitorias barsanulfo
while(i < size(a)):
	if(a[i]==11 and b[i]==22):
		k = k +1
	elif(a[i]==11 and b[i]==33):
		j = j +1
	elif(a[i]==22 and b[i]==11):
		j = j + 1
	elif(a[i]==22 and b[i]==33):
		k = k + 1
	elif(a[i]==33 and b[i]==11):
		k = k + 1
	elif(a[i]==33 and b[i]==22):
		j = j + 1
	i = i + 1
print(i)
if(j>k):
	print("EUSAPIA")
elif(j<k):
	print("BARSANULFO")
else :
	print("EMPATE")

	

-- EXECUTION TIME:
0.386345
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 14:55:15) 
-- CODE:
from numpy import*
a = array(eval(input("jogadores de eusapia")))
b = array(eval(input("jogadores de barsanulfo")))
i = 0 #posicao do vetor
j = 0 #vitorias eusapia
k = 0 #vitorias barsanulfo
while(i < size(a)):
	if(a[i]==11 and b[i]==22):
		k = k +1
	elif(a[i]==11 and b[i]==33):
		j = j +1
	elif(a[i]==22 and b[i]==11):
		j = j + 1
	elif(a[i]==22 and b[i]==33):
		k = k + 1
	elif(a[i]==33 and b[i]==11):
		k = k + 1
	elif(a[i]==33 and b[i]==22):
		j = j + 1
	i = i + 1
print(i)
if(j>k):
	print("EUSAPIA")
elif(j<k):
	print("BARSANULFO")
else :
	print("EMPATE")

	

-- EXECUTION TIME:
0.538283
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:55:18) 
-- CODE:
from numpy import*
a = array(eval(input("jogadores de eusapia")))
b = array(eval(input("jogadores de barsanulfo")))
i = 0 #posicao do vetor
j = 0 #vitorias eusapia
k = 0 #vitorias barsanulfo
while(i < size(a)):
	if(a[i]==11 and b[i]==22):
		k = k +1
	elif(a[i]==11 and b[i]==33):
		j = j +1
	elif(a[i]==22 and b[i]==11):
		j = j + 1
	elif(a[i]==22 and b[i]==33):
		k = k + 1
	elif(a[i]==33 and b[i]==11):
		k = k + 1
	elif(a[i]==33 and b[i]==22):
		j = j + 1
	i = i + 1
print(i)
if(j>k):
	print("EUSAPIA")
elif(j<k):
	print("BARSANULFO")
else :
	print("EMPATE")

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 14:55:39) 
-- CODE:
from numpy import*
a = array(eval(input("jogadores de eusapia")))
b = array(eval(input("jogadores de barsanulfo")))
i = 0 #posicao do vetor
j = 0 #vitorias eusapia
k = 0 #vitorias barsanulfo
while(i < size(a)):
	if(a[i]==11 and b[i]==22):
		k = k +1
	elif(a[i]==11 and b[i]==33):
		j = j +1
	elif(a[i]==22 and b[i]==11):
		j = j + 1
	elif(a[i]==22 and b[i]==33):
		k = k + 1
	elif(a[i]==33 and b[i]==11):
		k = k + 1
	elif(a[i]==33 and b[i]==22):
		j = j + 1
	i = i + 1
print(i)
if(j>k):
	print("EUSAPIA")
elif(j<k):
	print("BARSANULFO")
else :
	print("EMPATE")

	

-- EXECUTION TIME:
0.431681
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
